2010-03-25  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Log the exception message, not just the fact that an exception
	occurred.

2010-03-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Fix a bug when the video tag containing the sequence header comes before
	the new metadata and the codec didn't change. The change was not
	detected till the metadata came and the sequece header was dropped.
	Consequently, all the following tags were dropped because there were no
	sequence header.
	Fixes #8604

2010-02-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Handle better when two or more clients try to publish at the same time.

2010-02-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/producers/fms/fms.py:
	Enable the component to accept reconnections from the encoder:
	  - When there are network problems
	  - When the encoder is stopped/restarted
	  - When the user changes the configuration of the encoded stream

2010-02-15  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* env.in:
	Add flumotion scripts to the path in env

2010-01-28  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* Makefile.am:
	Add rpm creation rules to the makefile
	* configure.ac:
	* flumotion-flashmedia.spec.in:
	Sync with changes in flumotion at r8195

2009-06-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/fms/fms.py:
	The bug the last commit worked around is now fixed.

2009-06-04  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/fms/fms.py:
	RTMPy seems to not report refused publish error to FME,
	so the encoder don't gives feedback and seems to stream
	normally even if the data is discarded by RTMPy.
	Force disconnection when refusing to publish a stream.
