@@ -1,3 +1,12 @@
+2010-03-26  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	reviewed by: Julien LeGoff
+
+	* flumotion/component/producers/fms/fms.py:
+	When setting the new stream header from the backup we shouldn't try to
+	start streaming before sending the present buffer normaly.
+	Add comments about the new behaviour.
+
 2010-03-25  Jan Urbanski  <jurbanski@flumotion.com>
 
 	* flumotion/component/producers/fms/fms.py:
